--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -7,6 +7,7 @@ import "@/globals.css";
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burak&apos;s Portfolio</title>
   </head>
   <body>
